# mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/email-mcp/: README.md  pyproject.toml
src/email-mcp/src/email_mcp/: cli.py  server.py
