[project]
name = "email-mcp"
version = "0.1.0"
description = "MCP server wrapping himalaya CLI for AI email access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "email", "himalaya", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp[cli]",
    "tomlkit",
]

[project.scripts]
email-mcp = "email_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_mcp"]
